--- a/MVCwebside/Views/Home/FetchGreet.cshtml
+++ b/MVCwebside/Views/Home/FetchGreet.cshtml
@@ -1,5 +1,37 @@
-﻿@*
+﻿
+<button class="btn btn-primary" id="getAsync">非同步Get</button>
+<button class="btn btn-primary" id="postAsync">非同步Post</button>
+<img src="~/images/basketball.gif" style="width:30px;height:30px;display:none;" id="basketball" />
+<div id="result">
+</div>
+
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@{
+@section Scripts{
+    <script>
+        $("#getAsync").on("click", function () {
+            //alert("確認觸發");
+            var p =encodeURI("Name=陳曉東");
+            $("#basketball").show();
+            //fetch("網址",{參數}).then().then().then().catch();
+            fetch("https://localhost:7124/Ajax/Greet?"+p, { method:"Get" }).then(function(data){
+                if(data.ok){
+                    $("#basketball").hide();
+                    return data.text();  // return data.json();
+                }
+            }).then(function(data){
+                $("#result").text(data);
+            }).catch(function(err){
+                $("#basketball").hide();
+                alert(err);
+            })
+
+        });
+        $("#postAsync").on("click", function () {
+            //alert("確認觸發");
+            url: "https://localhost:7124/Ajax/Greet"
+
+        });
+    </script>
 }
