--- a/MVCwebside/Views/Home/JQueryGreet.cshtml
+++ b/MVCwebside/Views/Home/JQueryGreet.cshtml
@@ -34,7 +34,7 @@
                 type: "Post",
                 data:{
                     Name:"柯小明"
-                },
+                }, //ContentType (資料送到seaver)
                 url: "https://localhost:7124/Ajax/Greet" 
             }).done(function (data) {
                 $("#basketball").hide();
