--- a/MVCwebside/Views/Home/FetchGreet.cshtml
+++ b/MVCwebside/Views/Home/FetchGreet.cshtml
@@ -30,7 +30,29 @@
         });
         $("#postAsync").on("click", function () {
             //alert("確認觸發");
-            url: "https://localhost:7124/Ajax/Greet"
+            //url: "https://localhost:7124/Ajax/Greet"
+            var data={
+                Name: "呂小明"
+            };
+            $("#basketball").show();
+            fetch("https://localhost:7124/Ajax/FetchPostGreet", {
+                method:"POST", 
+                body:JSON.stringify(data),
+                headers:{
+                "content-type":"application/json"
+            }
+            }).then(function (data) {
+                if (data.ok) {
+                    $("#basketball").hide();
+                    return data.text();  // return data.json();
+                }
+            }).then(function (data) {
+                $("#result").text(data);
+            }).catch(function (err) {
+                $("#basketball").hide();
+                alert(err);
+            })
+
 
         });
     </script>
